# AI-Revenue-Systems-Studio

./: .gitignore  AI-Revenue-Systems-Studio-Blueprint.md  CUSTOMER_READY_SALES_PLAYBOOK.md  DEPLOY-AND-START.md  README.md  START-HERE.md  agent_executor.py  app.py  complicore_stayops_demo.html  environment.yml  index.html  pyproject.toml  railway.toml  scripts_bootstrap_client.sh  start.sh
client-delivery-pack/: README.md
clients/demo-client/: README.md
clients/demo-client/02-discovery/: discovery-workflow-map.md
clients/demo-client/04-qa/: qa-launch-checklist.md
clients/demo-client/06-handoff/: handoff-package.md
scripts/: validate_client_workspace.sh
templates/: access-checklist.md  client-intake-form.md  client-onboarding-email.md  kpi-scorecard.md  proposal-scope-guardrails.md  retainer-renewal-summary.md  weekly-client-report.md
