[project]
name = "AI-Revenue-Systems-Studio"
version = "0.1.0"
description = "We install the AI systems that help your business capture leads, respond instantly, create content, automate admin, and convert more customers without hiring more staff."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22"
]

[project.scripts]
app = "app:app"
